# keyboard-volume-app

./: .clang-format  .clang-tidy  .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README.pl.md  ROADMAP.md  keyboard-volume-app.desktop  requirements.txt
.codesight/: CODESIGHT.md  config.md  libs.md
.codesight/wiki/: index.md  log.md  overview.md
.github/scripts/: audit-branches.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude-verifier.yml
cpp/: CMakeLists.txt  resources.qrc
cpp/cmake/: cpack.cmake
cpp/src/: albumartcache.cpp  albumartcache.h  applistwidget.cpp  applistwidget.h  appmatcher.h  appselectordialog.cpp  appselectordialog.h  audioapp.h  config.cpp  config.h  dbusinterface.cpp  dbusinterface.h  deviceselector.cpp  deviceselector.h  evdevdevice.cpp  evdevdevice.h  firstrunwizard.cpp  firstrunwizard.h  i18n.cpp  i18n.h  inputhandler.cpp  inputhandler.h  kvctl.cpp  kvctlcommand.cpp  kvctlcommand.h  main.cpp  mprisclient.cpp  mprisclient.h  mprisinterface.cpp  mprisinterface.h  osdlabelformat.cpp  osdlabelformat.h  osdwindow.cpp  osdwindow.h  profileeditdialog.cpp  profileeditdialog.h  pwutils.cpp  pwutils.h  sceneeditdialog.cpp  sceneeditdialog.h  (+10 more)
cpp/tests/: CMakeLists.txt  test_appmatcher.cpp  test_config.cpp  test_dbusinterface.cpp  test_i18n.cpp  test_inputhandler.cpp  test_kvctlcommand.cpp  test_mprisclient.cpp  test_osdlabelformat.cpp  test_osdwindow.cpp  test_pwutils.cpp  test_volumecontroller.cpp
deploy/: keyboard-volume-app.service
pkg/arch/: .SRCINFO  PKGBUILD
resources/: keyboard-volume-app.desktop
src/: config.py  device_selector.py  i18n.py  input_handler.py  main.py  osd_window.py  settings_dialog.py  tray_app.py  volume_controller.py
